--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "source": "src/index.html",
   "scripts": {
+    "start": "npx parcel src/index.html",
+    "build": "npx parcel build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -14,7 +16,11 @@
     "process": "^0.11.10"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^6.1.5",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.27.0"
   }
 }
