--- a/package.json
+++ b/package.json
@@ -1,19 +1,31 @@
 {
   "name": "kitty-cam-react",
   "version": "1.0.0",
-  "description": "",
-  "source": "src/index.html",
+  "private": true,
   "scripts": {
-    "start": "npx parcel src/index.html",
-    "build": "npx parcel build",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
   "devDependencies": {
-    "parcel": "^2.12.0",
-    "process": "^0.11.10"
+    "@vitejs/plugin-react-swc": "^3.7.1",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.1",
+    "events": "^3.3.0",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
+    "process": "^0.11.10",
+    "stream-browserify": "^3.0.0",
+    "string_decoder": "^1.3.0",
+    "vite": "^5.4.10",
+    "vm-browserify": "^1.1.2"
   },
   "dependencies": {
     "@emotion/react": "^11.13.3",
@@ -22,8 +34,23 @@
     "@mui/material": "^6.1.5",
     "@mui/x-charts": "^7.22.0",
     "@tanstack/react-query": "^5.59.16",
+    "dotenv": "^16.4.5",
+    "parcel": "^2.12.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.27.0"
+    "react-router-dom": "^6.27.0",
+    "react-scripts": "^5.0.1"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
